--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "nodemon": "^3.0.3",
     "nunjucks": "^3.2.4",
     "sequelize": "^6.37.1",
