--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon -e js,json,njk"
+    "start": "nodemon -e js,json,njk -i sessions"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "nodemon": "^3.0.3",
     "nunjucks": "^3.2.4",
     "sequelize": "^6.37.1",
+    "session-file-store": "^1.5.0",
     "sqlite3": "^5.1.7"
   }
 }
